<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".Fragment.Confirm_Order">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="#d1cece" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="10dp"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <TextView
                                android:id="@+id/tv_shipping_title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1.2"
                                android:text="@string/shippingto"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_add_edit_confirm"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginRight="5dp"
                                android:layout_weight="2.8"
                                android:gravity="center|end"
                                android:text="@string/edit"
                                android:visibility="invisible"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_weight="1.2"
                                android:gravity="center|left"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/confirmpay_add"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="#d1cece" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="5dp"
                            android:weightSum="4">

                            <TextView
                                android:id="@+id/tv_conf_order"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1.2"
                                android:text="@string/yourorder"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_cart_edit_confirm"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginRight="5dp"
                                android:layout_weight="2.8"
                                android:gravity="center|end"
                                android:text="@string/edit"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:orientation="vertical">

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/recyclerview_confirmation"
                                android:layout_width="match_parent"
                                android:visibility="visible"
                                android:layout_height="match_parent" />

                            <ProgressBar
                                android:id="@+id/progressBar_confom_cart"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="50dp"
                                android:layout_marginBottom="50dp"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:indeterminateDrawable="@drawable/progressbar_ui"
                                android:visibility="gone" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="#d1cece" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/tv_shppingfee"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="SHIPPING FEES"
                                android:textColor="@color/black"
                                android:textSize="14dp"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/shipping_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0.00"
                                android:textColor="@color/black"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/discounttt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="DISCOUNT"
                                android:textColor="@color/black"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tv_discount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0.00"
                                android:textColor="@color/black"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TOTAL"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/grand_totall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_shipping_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_btn_black"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.8">

                        <ImageView
                            android:id="@+id/iv_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                            android:tint="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lv_ordernow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_continue_payment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/ordernow"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="3.6"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_riht"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                        android:tint="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>